# musicmeta

./: Cargo.toml
src/: lib.rs  schema.rs
src/ipi/: mod.rs  validate.rs
src/isrc/: mod.rs
src/iswc/: mod.rs  validate.rs
src/tis/: mod.rs  publisher_role.rs  society.rs  territory.rs  writer_role.rs
