[package]
name = "musicmeta"
version = "0.1.0"
edition = "2024"

[dependencies]
schemars = "1.2.1"
serde = {version = "1.0.228", features=["derive"]}
sqlite = { version = "0.37.0", optional = true }
thiserror = "2.0.18"

[features]
# A feature that enables an optional dependency
default = []
sqlite = ["dep:sqlite"]
full = ["sqlite"]
